src/main/java/com/example/jobala/_core/errors/apiException/ApiException401.java
package com.example.jobala._core.errors.apiException;

public class ApiException401 extends RuntimeException {

    public ApiException401(String msg) {
        super(msg);
    }
}
